--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <title>Bellybutton Biodiversity</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -47,7 +46,8 @@
     </div>
   </div>
 
-  <script src="./static/js/app.js"></script>
+
+  <script src="./static/js/belly_button_app.js"></script>
 
 </body>
 
